# crow

./: Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  build.yml  release.yml  scheduled-audit.yml
github/workflows/: build.yml
src/: command_scores.rs  commands.rs  crow_commands.rs  crow_db.rs  events.rs  fuzzy.rs  history.rs  input.rs  lib.rs  main.rs  rendering.rs  scored_commands.rs  state.rs
src/commands/: add.rs  add_last.rs  default.rs
testdata/: .bash_history  .zsh_history  crow.json
